# torchspd

./: LICENSE  README.md  pyproject.toml  setup.py
src/torchspd/: __init__.py  torchspd.py
